--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,15 @@
-services:
-  # A Docker web service
-  - type: web
-    name: fastapi-example
-    runtime: python
-    plan: free
-    autoDeploy: false
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+from fastapi import FastAPI
+
+app = FastAPI()
+
+
+@app.get("/")
+async def root():
+    return {"message": "HELLO THERE ;)"}
+
+# New endpoint to sum two numbers
+@app.get("/sum")
+async def sum_two_numbers(a: int, b: int):
+    result = a + b
+    return {"a": a, "b": b, "sum": result}
+
